# Scales

./: .gitignore  README.md  pyproject.toml  setup.py
scales/: __init__.py
scales/Calibration/: BruteForceSweep.py  CalibrateFlow_ConstantRate_multpeak.py  CalibrateFlow_NoReaction_packedbed.py  PrepareBed.py  ScaleNetwork.py
scales/Functions/: DiffusionAdvectionSlab.py
scales/GeneticAlgorithm/: CalibrateFlow.py  CalibrateFlow_ConstantPressure.py  CalibrateFlow_ConstantRate.py  CalibrateFlow_ConstantRate_multpeak.py  CalibrateFlow_ConvectionOnly.py  CalibrateFlow_iGC.py  PyGad_TravellingSalesman.py  SimpleTest.py
scales/IO/: ReadLiggghts.py
scales/PNM/: LaplaceNetworkExtract.py  Liggghts2Segmented.py  ModelPorousImage.py  OP_operators.py  PoissonNetworkExtract.py  Utils.py  imperialcollege.py  impericalcollege.py
scales/PNM/Operators/: Convection.py  Diffusion.py  DiffusionConvection.py  DiluteFlow.py  Flow_Adsorption.py  Flow_Calibrated.py  Flow_Calibrated_MT.py  MassTransfer.py  NumericalDifferentiation.py  OP_operators.py  Outflow_Convection.py  RateBC_Convection.py
scales/image_analysis/: PointCloud2STL.py
src/: __init__.py
src/PNM/: LaplaceNetworkExtract.py  Utils.py
src/image_analysis/: TiffUtils.py  Voxel2STL.py
